add linux instructions